Add microsoft login

--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -20,5 +20,9 @@
   "Facebook": {
     "AppId": "732743908216144",
     "AppSecret": "890e4536f7c50b96707800a23f59a527"
+  },
+  "Microsoft": {
+    "ClientId": "b09bb4b9-5217-4d41-aa54-da0d961e0585",
+    "ClientSecret": "SbS8Q~YiJBuFSDR3NTDEeTbVCGuMMmFSuSMbpdyn"
   }
 }
